--- a/css/app.less
+++ b/css/app.less
@@ -7,26 +7,18 @@
     top: 0;
     left: 0;
     right: 0;
-    bottom: 100px;
+    bottom: 80px;
   }
 
   .controls-container {
     position: absolute;
     bottom: 0;
     left: 0;
-    height: 100px;
+    right: 0;
+    height: 80px;
+  }
 
-    .filters {
-      background: white;
-      margin: 0 auto;
-
-      label {
-        display: block;
-      }
-
-      input {
-        width: 600px;
-      }
-    }
+  .leaflet-control-attribution {
+    display: none;
   }
 }
