Add fullscreen button
[#111344954]

--- a/css/controls.less
+++ b/css/controls.less
@@ -16,12 +16,12 @@
     margin: 0 10px;
   }
 
-  .animation-button, .settings-icon {
-    margin: 0 30px;
+  .animation-button, .settings-icon, .fullscreen-icon {
+    margin: 0 15px;
     display: inline-block;
     font-size: 3.5em;
     cursor: pointer;
-    color: #444;
+    color: #777;
     &:hover {
       color: #000;
     }
