--- a/css/app.less
+++ b/css/app.less
@@ -21,4 +21,11 @@
   .leaflet-control-attribution {
     display: none;
   }
+
+  .error {
+    text-align: center;
+    h1 {
+      margin-top: 5em;
+    }
+  }
 }
