--- a/css/seismic-eruptions-map.less
+++ b/css/seismic-eruptions-map.less
@@ -10,12 +10,14 @@
     position: absolute;
     left: 10px;
     top: 80px;
+    z-index: 100;
   }
 
   .map-controls-bottom {
     position: absolute;
     left: 10px;
     bottom: 10px;
+    z-index: 100;
   }
 
   .map-button {
