--- a/css/controls.less
+++ b/css/controls.less
@@ -12,12 +12,12 @@
   }
 
   img {
-    height: 60px;
-    margin: 0 10px;
+    width: 9em;
+    margin-left: 0.5em;
   }
 
   .animation-button, .settings-icon, .fullscreen-icon {
-    margin: 0 15px;
+    margin: 0 0.2em;
     display: inline-block;
     font-size: 3.5em;
     cursor: pointer;
@@ -30,10 +30,10 @@
   .settings {
     position: fixed;
     right: 0;
-    bottom: 80px;
+    bottom: 4.5em;
     background: white;
     padding: 0.5em 1em;
-    width: 480px;
+    max-width: 100%;
     border-top-left-radius: 10px;
     color: #444;
     transition: right 750ms;
@@ -55,8 +55,8 @@
 
     .rc-slider {
       font-size: 0.6em;
-      width: 400px;
-      margin: 15px 5px;
+      width: 99%;
+      margin: 1em 0.5em;
     }
   }
 }
