--- a/css/seismic-eruptions-map.less
+++ b/css/seismic-eruptions-map.less
@@ -26,6 +26,7 @@
     border-radius: 4px;
     width: 26px;
     height: 26px;
+    font-size: 16px;
     box-shadow: 0 1px 5px rgba(0,0,0,0.65);
     cursor: pointer;
     padding-top: 4px;
