Add cross section draw tool
[#116703953] [#116704295]

--- a/css/custom-leaflet-icons.less
+++ b/css/custom-leaflet-icons.less
@@ -28,3 +28,13 @@
 .invisible-icon {
   display: none !important;
 }
+
+.circle-icon {
+  background: #fff;
+  width: 20px !important;
+  height: 20px !important;
+  margin-top: -10px !important;
+  margin-left: -10px !important;
+  border-radius: 10px;
+  box-shadow: 0 0 7px rgba(0,0,0,0.55);
+}
