--- a/css/map-button.less
+++ b/css/map-button.less
@@ -2,13 +2,18 @@
   color: #444;
   background: #fff;
   border-radius: 4px;
-  padding: 10px 10px 6px 10px;
+  padding: 4px 10px 6px 10px;
   font-size: 16px;
   box-shadow: 0 1px 5px rgba(0,0,0,0.65);
   cursor: pointer;
-  padding-top: 4px;
   text-align: center;
   margin: 4px;
+
+  &.icon-only {
+    width: 26px;
+    height: 26px;
+    padding: 4px 0 0 0;
+  }
 
   &:hover {
     background: #f4f4f4;
