--- a/css/custom-leaflet-icons.less
+++ b/css/custom-leaflet-icons.less
@@ -37,4 +37,7 @@
   margin-left: -10px !important;
   border-radius: 10px;
   box-shadow: 0 0 7px rgba(0,0,0,0.55);
+  text-align: center;
+  line-height: 20px;
+  color: #666;
 }
