Implement UI for 3D view
[#116894959]
[#116893833]
[#73221190]

- go back to 2D
- map key
- reset camera
- other tweaks and refactoring

--- a/css/app.less
+++ b/css/app.less
@@ -25,7 +25,7 @@
     left: 0;
   }
 
-  .controls-container {
+  .bottom-controls-container {
     position: absolute;
     bottom: 0;
     left: 0;
