--- a/css/overlay-button.less
+++ b/css/overlay-button.less
@@ -1,4 +1,4 @@
-.map-button {
+.overlay-button {
   color: #444;
   background: #fff;
   border-radius: 4px;
@@ -9,10 +9,17 @@
   text-align: center;
   margin: 4px;
 
+  i {
+    margin-right: 0.25em;
+  }
+
   &.icon-only {
     width: 26px;
     height: 26px;
     padding: 4px 0 0 0;
+    i {
+      margin-right: 0;
+    }
   }
 
   &:hover {
