--- a/css/bottom-controls.less
+++ b/css/bottom-controls.less
@@ -34,6 +34,7 @@
     bottom: 4.5em;
     background: white;
     padding: 0.5em 1em;
+    min-width: 33em;
     max-width: 100%;
     border-top-left-radius: 10px;
     color: #444;
@@ -56,7 +57,7 @@
 
     .rc-slider {
       font-size: 0.6em;
-      width: 99%;
+      width: 93%;
       margin: 1em 0.5em;
     }
   }
