--- a/css/bottom-controls.less
+++ b/css/bottom-controls.less
@@ -1,6 +1,6 @@
 .bottom-controls {
   width: 100%;
-  height: 100%;
+  padding-bottom:0.2em;
   overflow: hidden;
   flex-wrap: nowrap;
   align-items: center;
@@ -24,41 +24,6 @@
     color: #777;
     &:hover {
       color: #000;
-    }
-  }
-
-  .settings {
-    z-index: 200;
-    position: fixed;
-    right: 0;
-    bottom: 4.5em;
-    background: white;
-    padding: 0.5em 1em;
-    min-width: 33em;
-    max-width: 100%;
-    border-top-left-radius: 10px;
-    color: #444;
-    transition: right 750ms;
-    &.hidden {
-      right: -700px;
-    }
-
-    & > div {
-      margin: 20px;
-    }
-
-    h2 {
-      margin-bottom: 1em;
-    }
-
-    select {
-      margin-left: 10px;
-    }
-
-    .rc-slider {
-      font-size: 0.6em;
-      width: 93%;
-      margin: 1em 0.5em;
     }
   }
 }
