--- a/css/settings-controls.less
+++ b/css/settings-controls.less
@@ -36,14 +36,8 @@
     font-size:1.5em;
   }
 
-  .mag-range-slider{
-    height:1em;
-
-    & > div{
-      float:left;
-      padding-left:10px;
-      min-height:15px;
-    }
+  .map-type-label{
+    padding-right:0px;
   }
 
   .rc-slider {
