Adjust css and tidy up code for map type options

--- a/css/settings-controls.less
+++ b/css/settings-controls.less
@@ -40,8 +40,11 @@
     padding-right:0px;
   }
 
-  .rc-slider {
+  .mag-slider{
     float:left;
+  }
+
+  .rc-slider {
     font-size: 0.6em;
     min-width: 125px;
     margin: 0.5em;
