--- a/css/loading-icon.less
+++ b/css/loading-icon.less
@@ -14,7 +14,8 @@
   right: 0;
   bottom: 0;
   text-align: center;
-  background: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+  transform: scale(0.3);
   z-index: 1000;
   display: flex;
   justify-content: center;
