--- a/css/bottom-controls.less
+++ b/css/bottom-controls.less
@@ -16,32 +16,18 @@
     margin-left: 0.5em;
   }
 
-  .animation-button, .settings-icon, .fullscreen-icon {
-    margin: 0.5em 0.5em;
+  .fullscreen-icon {
+    margin: 0.5em;
     font-size: 1.5em;
     height: 1.5em;
     width: 1.5em;
-    line-height: 1.5em;
-    display: inline-block;
-    text-align:center;
     cursor: pointer;
-    color: #777;
-    background-color: #eeeeee;
-    background-image: linear-gradient(top, #fbfbfb, #bcbec0);
-    border-radius: 0.6em;
-    &:hover {
-      color: #444;
-      background-image: linear-gradient(top, #fff, #d8d8d8);
-    }
-  }
-  .fullscreen-icon {
     background-image: url("icons/fullscreen.svg");
     background-color: transparent;
     background-repeat: no-repeat;
     background-size: 1.5em;
     border-radius: 0;
     color: transparent;
-
     &:hover {
       background-image: url("icons/fullscreen-dark.svg");
     }
