--- a/css/bottom-controls.less
+++ b/css/bottom-controls.less
@@ -1,6 +1,6 @@
 .bottom-controls {
   width: 100%;
-  padding-bottom:0.2em;
+  padding-bottom: 0.2em;
   overflow: hidden;
   flex-wrap: nowrap;
   align-items: center;
@@ -17,7 +17,7 @@
   }
 
   .fullscreen-icon {
-    margin: 0.5em;
+    margin-left: 0.5em;
     font-size: 1.5em;
     height: 1.5em;
     width: 1.5em;
