Update About text
[#110361102]

--- a/css/basic-modal.less
+++ b/css/basic-modal.less
@@ -16,12 +16,16 @@
   right: auto;
   bottom: auto;
   margin-right: -50%;
-  max-width: 50%;
+  max-width: 70%;
   transform: translate(-50%, -50%);
   overflow: auto;
   pointer-events: auto;
   z-index: 2000;
   outline: none;
+
+  &.narrow {
+    max-width: 45%;
+  }
 
   .title {
     margin-right: 1em;
