Update bottom row of map settings
[#110361102]

--- a/css/bottom-controls.less
+++ b/css/bottom-controls.less
@@ -11,13 +11,8 @@
     margin: 0 30px;
   }
 
-  img {
-    width: 9em;
-    margin-left: 0.5em;
-  }
-
   .fullscreen-icon {
-    margin-left: 0.5em;
+    margin: 0 0.5em;
     font-size: 1.5em;
     height: 1.5em;
     width: 1.5em;
