--- a/css/settings-controls.less
+++ b/css/settings-controls.less
@@ -5,12 +5,12 @@
   align-items: center;
   justify-content: flex-start;
   border-top: 1px solid #eee;
-  padding: 0.8em 1em;
+  padding: 0.1em 1em;
   color: #444;
 
-  .settings-label {
-    font-weight: bold;
-    font-size: 1.15em;
+  img {
+    height: 3em;
+    margin-left: 0.5em;
   }
 
   & > div {
@@ -36,7 +36,7 @@
     margin-left: 1em;
 
     .rc-slider {
-      min-width: 150px;
+      min-width: 100px;
     }
     .rc-tooltip-inner > span {
       font-family: sans-serif;
