--- a/css/settings-controls.less
+++ b/css/settings-controls.less
@@ -21,8 +21,12 @@
     margin-left: 2em;
   }
 
-  input, select {
+  select {
     margin-left: 0.5em;
+  }
+
+  input {
+    margin-right: 0.5em;
   }
 
   .mag-label {
