Tweak CSS styles

--- a/css/app.less
+++ b/css/app.less
@@ -1,10 +1,12 @@
 .seismic-explorer-app {
   font: 16px verdana, helvetica, sans-serif;
-  height: 100%;
-
-  @media (max-width: 700px) {
+  @media (max-width: 810px) {
     font-size: 12px;
   }
+  @media (max-width: 650px) {
+    font-size: 10px;
+  }
+  height: 100%;
 
   .top-controls-container {
     position: absolute;
