--- a/css/basic-modal.less
+++ b/css/basic-modal.less
@@ -10,6 +10,12 @@
 
 .basic-modal {
   font: 16px verdana, helvetica, sans-serif;
+  @media (max-width: 810px) {
+    font-size: 14px;
+  }
+  @media (max-width: 650px) {
+    font-size: 12px;
+  }
   position: absolute;
   top: 50%;
   left: 50%;
