--- a/css/settings-controls.less
+++ b/css/settings-controls.less
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: flex-start;
   border-top: 1px solid #eee;
-  padding: 0.1em 1em;
+  padding: 0.2em 1em;
   color: #444;
 
   img {
@@ -40,7 +40,7 @@
     margin-left: 1em;
 
     .rc-slider {
-      min-width: 100px;
+      min-width: 20em;
     }
     .rc-tooltip-inner > span {
       font-family: sans-serif;
