Display earthquakes stats in map key dialog
[#130918575]

--- a/css/map-key.less
+++ b/css/map-key.less
@@ -32,4 +32,9 @@
     height: 25px;
     box-shadow: 0 1px 5px rgba(0,0,0,0.35);
   }
+
+  .stats {
+    max-width: 24em;
+    font-size: 0.75em;
+  }
 }
