--- a/css/app.less
+++ b/css/app.less
@@ -13,13 +13,15 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 1.5em;
+    /* Don't scale this container, use fixed height and font size (in px). */
+    height: 22px;
     background: #fff;
+    z-index: 1000;
   }
 
   .map-container {
     position: absolute;
-    top: 1.5em;
+    top: 22px;
     left: 0;
     right: 0;
     bottom: 6.4em;
