Add toggle to hide earthquakes [#136453813]

--- a/css/settings-controls.less
+++ b/css/settings-controls.less
@@ -8,6 +8,9 @@
   padding: 0.2em 1em;
   color: #444;
 
+  div {
+    display: inline-block;
+  }
   img {
     height: 3em;
     margin-left: 0.5em;
@@ -30,12 +33,10 @@
   }
 
   .mag-label {
-    display: inline-block;
     vertical-align: middle;
   }
 
   .mag-slider {
-    display: inline-block;
     vertical-align: text-top;
     margin-left: 1em;
 
@@ -46,4 +47,8 @@
       font-family: sans-serif;
     }
   }
+  .toggle-earthquakes{
+    margin-left:1em;
+  }
+
 }
