Replicate some of the functionality from the earthquake rendering layer

--- a/css/seismic-eruptions-map.less
+++ b/css/seismic-eruptions-map.less
@@ -14,6 +14,9 @@
     .earthquakes-canvas-layer {
       z-index: 1;
     }
+    .plate-movement-canvas-layer {
+      z-index: 1;
+    }
   }
 
   /* Set of styles applied only when user enters cross section drawing mode */
