Handle volcano click event and show a popup at the location, displaying just coordinates and date for now

--- a/css/seismic-eruptions-map.less
+++ b/css/seismic-eruptions-map.less
@@ -14,6 +14,9 @@
     .earthquakes-canvas-layer {
       z-index: 1;
     }
+    .volcanos-canvas-layer {
+      z-index: 3;
+    }
   }
 
   /* Set of styles applied only when user enters cross section drawing mode */
@@ -28,6 +31,9 @@
         z-index: 1;
       }
       .earthquakes-canvas-layer {
+        z-index: 0;
+      }
+      .volcanos-canvas-layer {
         z-index: 0;
       }
     }
