Add a simple symbol for a volcano to the key

--- a/css/map-key.less
+++ b/css/map-key.less
@@ -37,4 +37,20 @@
     max-width: 24em;
     font-size: 0.75em;
   }
+
+  .volcanos{
+    td{
+      min-width: 48px;
+      text-align: center;
+    }
+  }
+
+  .volcano-marker {
+    margin: auto;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 12px 20.8px 12px;
+    border-color: transparent transparent #ff6600 transparent;
+  }
 }
