--- a/css/layer-controls.less
+++ b/css/layer-controls.less
@@ -6,10 +6,10 @@
 
 .map-layer-content{
     display: block;
-    width: 200px;
-    height: 100px;
+    width: auto;
+    height: auto;
     position: absolute;
-    left: 300px;
+    left: 345px;
     bottom: 35px;
     z-index: 3;
     padding-top:20px;
