Update key to match volcano rendering

--- a/css/map-key.less
+++ b/css/map-key.less
@@ -43,6 +43,9 @@
       min-width: 48px;
       text-align: center;
     }
+    td + td{
+      text-align: left;
+    }
   }
 
   .volcano-marker {
