Change positioning of explanatory text in the lower section of the screen to make it fit better within LARA

--- a/css/settings-controls.less
+++ b/css/settings-controls.less
@@ -32,8 +32,9 @@
     margin-right: 0.5em;
   }
 
-  .mag-label {
-    vertical-align: middle;
+  .stats {
+    vertical-align: text-top;
+    width:240px;
   }
 
   .mag-slider {
@@ -41,7 +42,8 @@
     margin-left: 1em;
 
     .rc-slider {
-      min-width: 20em;
+      margin-left:4px;
+      min-width: 25em;
     }
     .rc-tooltip-inner > span {
       font-family: sans-serif;
@@ -50,7 +52,5 @@
   .toggle-earthquakes{
     margin-left:1em;
   }
-  .stats{
-    margin-left:1em;
-  }
+
 }
