--- a/css/settings-controls.less
+++ b/css/settings-controls.less
@@ -1,5 +1,20 @@
+.earthquake-playback {
+  width: 100%;
+  padding-bottom: 0.2em;
+  overflow: hidden;
+  flex-wrap: nowrap;
+  align-items: center;
+  display: flex;
+
+  .center {
+    flex: 5 1 auto;
+    margin: 0 30px;
+  }
+}
+
 .settings {
   font-size: 0.7em;
+  height: 3.5em;
   flex-wrap: nowrap;
   display: flex;
   align-items: center;
@@ -18,6 +33,7 @@
 
   & > div {
     white-space: nowrap;
+    vertical-align: middle;
   }
 
   & > div + div {
@@ -33,13 +49,12 @@
   }
 
   .stats {
-    vertical-align: text-top;
     width:240px;
   }
 
   .mag-slider {
-    vertical-align: text-top;
     margin-left: 1em;
+    height: 3.5em;
 
     .rc-slider {
       margin-left:4px;
@@ -49,8 +64,35 @@
       font-family: sans-serif;
     }
   }
-  .toggle-earthquakes{
+
+  .toggle-earthquakes {
     margin-left:1em;
+  }
+
+  .fullscreen-icon {
+    position: absolute;
+    right: 1em;
+    margin-top: -0.15em;
+    font-size: 1.5em;
+    height: 2em;
+    width: 2em;
+    background-size: 2em;
+    cursor: pointer;
+    background-image: url("icons/fullscreen.svg");
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border-radius: 0;
+    color: transparent;
+    &:hover {
+      background-image: url("icons/fullscreen-dark.svg");
+    }
+
+    &.fullscreen{
+      background-image: url("icons/fullscreen-exit.svg");
+      &:hover {
+        background-image: url("icons/fullscreen-exit-dark.svg");
+      }
+    }
   }
 
 }
