--- a/css/settings-controls.less
+++ b/css/settings-controls.less
@@ -8,7 +8,12 @@
 
   .center {
     flex: 5 1 auto;
-    margin: 0 30px;
+    margin: 0 3em 0 2em;
+
+    .rc-slider {
+      margin-top: 0.5em;
+      margin-bottom: 2em;
+    }
   }
 }
 
