Fix volcanoes popup (make sure it still works when earthquakes are visible too)
[#140520963]
[#151415972]

+ some refactoring and cleanup

--- a/css/seismic-eruptions-map.less
+++ b/css/seismic-eruptions-map.less
@@ -6,6 +6,10 @@
     height: 100%;
   }
 
+  .leaflet-marker-icon {
+    cursor: pointer;
+  }
+
   /* Earthquakes should be above SVG elements (plate boundaries) */
   .leaflet-overlay-pane {
     svg {
