Add plate arrows to the key
[#150887551]

--- a/css/map-key.less
+++ b/css/map-key.less
@@ -57,4 +57,10 @@
     border-width: 0 12px 20.8px 12px;
     border-color: transparent transparent #ff6600 transparent;
   }
+
+  .plateArrows img {
+    height: 18px;
+    margin-right: 15px;
+    vertical-align: middle;
+  }
 }
