--- a/css/authoring.less
+++ b/css/authoring.less
@@ -8,10 +8,6 @@
     border: 1px solid #eee;
   }
 
-  label {
-    display: block;
-  }
-
   input[type="text"] {
     width: 200px;
   }
@@ -33,5 +29,17 @@
 
   iframe {
     border: 1px solid #aaa;
+  }
+
+  .pins {
+    input[type="text"].coords {
+      width: 50px;
+    }
+    label {
+      margin-right: 10px;
+    }
+    .add, .remove {
+      cursor: pointer;
+    }
   }
 }
