Add continent and ocean names
[#158007094]

Refactor and reuse the same component that was used for plate names

--- a/css/labels-layer.less
+++ b/css/labels-layer.less
@@ -1,4 +1,4 @@
-.plate-name-icon  {
+.label-icon  {
   pointer-events: none;
   color: #fafafa;
   text-shadow: 1px 1px 3px #000;
@@ -8,7 +8,8 @@
   margin-top: -50px !important;
   text-align: center;
 
-  .plate-name-content {
+  .label-content {
+    font-size: 15px;
     height: 100%;
     display: flex;
     justify-content: center;
