--- a/css/layer-controls.less
+++ b/css/layer-controls.less
@@ -1,4 +1,10 @@
 .map-layer-controls{
+  font-size: 14px;
+
+  .title {
+    margin-bottom: 5px;
+  }
+
   .overlay-button{
     font-size:12px;
   }
@@ -16,6 +22,5 @@
 
     > div + div{
       display:block;
-      margin:10px;
     }
 }
