--- a/css/app.less
+++ b/css/app.less
@@ -1,5 +1,5 @@
 .seismic-explorer-app {
-  font: 16px verdana, helvetica, sans-serif;
+  font: 16px Lato, verdana, helvetica, sans-serif;
   @media (max-width: 810px) {
     font-size: 12px;
   }
