Update multiple widgets style, setup Material UI theme correctly
[#166842543]

--- a/css/basic-modal.less
+++ b/css/basic-modal.less
@@ -9,7 +9,7 @@
 }
 
 .basic-modal {
-  font: 16px verdana, helvetica, sans-serif;
+  font: 16px Lato, verdana, helvetica, sans-serif;
   @media (max-width: 810px) {
     font-size: 14px;
   }
