--- a/css/overlay-controls.less
+++ b/css/overlay-controls.less
@@ -16,21 +16,22 @@
     top: 10px;
     &.left {
       /* Leave room for Leaflet zoom buttons */
-     top: 80px;
+     top: 85px;
     }
   }
   .left {
-    left: 6px;
+    left: 12px;
   }
   .bottom {
-    bottom: 6em;
+    bottom: 6.5em;
   }
   .right {
-    right: 6px;
+    right: 1em;
   }
-  .inline {
-    .overlay-button {
-      display: inline-block;
+
+  .draw-cross-section-icon {
+    path {
+      fill-opacity: 1;
     }
   }
 }
