Make bottom bar centered and responsive
[#166842543]

--- a/css/layer-controls.less
+++ b/css/layer-controls.less
@@ -1,7 +1,10 @@
 .map-layer-controls  {
+  display: inline-block;
   position: relative;
   font-size: 14px;
-  margin-left: 12px;
+  &:not(:first-child) {
+    margin-left: 12px;
+  }
 
   .title {
     margin-bottom: 5px;
