--- a/css/app.less
+++ b/css/app.less
@@ -19,6 +19,10 @@
     left: 0;
     right: 0;
     bottom: 2em;
+    &.full-height {
+      top: 0;
+      bottom: 0;
+    }
   }
 
   .bottom-controls-container {
