Add scale to map

--- a/css/seismic-eruptions-map.less
+++ b/css/seismic-eruptions-map.less
@@ -10,6 +10,14 @@
     cursor: pointer;
   }
 
+  .scale-markers {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    color: white;
+    text-align: center;
+  }
   /* Earthquakes should be above SVG elements (plate boundaries) */
   .leaflet-overlay-pane {
     svg {
