Cypress fix to remove translateX css for slider handle

--- a/css/slider.less
+++ b/css/slider.less
@@ -19,6 +19,7 @@
     width: 2em;
     height: 2em;
     border-color: #D85900;
+    transform: translateX(0) !important;
     &:hover {
       .tooltip {
         display: block;
