--- a/css/seismic-eruptions-map.less
+++ b/css/seismic-eruptions-map.less
@@ -14,7 +14,9 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 30px;
+    height: 60px;
+    font-size: 20px;
+    font-weight: bold;
     color: white;
     text-align: center;
   }
