Improve visibility of markers & lint fix

--- a/css/pins-layer.less
+++ b/css/pins-layer.less
@@ -1,6 +1,9 @@
 .map-pin-icon  {
   color: #fafafa;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: rgb(46, 46, 46);
   text-shadow: 1px 1px 3px #000;
+  font-weight: bold;
   width: 200px !important;
   height: 100px !important;
   margin-left: -100px !important;
