Change pin color in click-to-move mode

--- a/css/pins-layer.less
+++ b/css/pins-layer.less
@@ -12,6 +12,9 @@
   &.fixed-position {
     pointer-events: none;
   }
+  &.colorful-pin {
+    color: #ffe839;
+  }
   .map-pin-content {
     font-size: 16px;
     line-height: 18px;
