Add markers for the two cross section points, adjust zoom of thumbnail to a reasonable scale

--- a/css/pins-layer.less
+++ b/css/pins-layer.less
@@ -29,4 +29,13 @@
       font-size: 32px;
     }
   }
+  &.small{
+    .map-pin-content {
+      font-size: 12px;
+      line-height: 10px;
+      .pin{
+        font-size: 14px;
+      }
+    }
+  }
 }
