Adjust position of view reset button so it isn't hidden by the thumbnail

--- a/css/overlay-controls.less
+++ b/css/overlay-controls.less
@@ -17,6 +17,10 @@
     &.left {
       /* Leave room for Leaflet zoom buttons */
      top: 85px;
+     &.cross-section{
+       top: 10px;
+       z-index: 2;
+     }
     }
   }
   .left {
