--- a/css/layer-controls.less
+++ b/css/layer-controls.less
@@ -33,3 +33,8 @@
   // Move first pane to the left, so it doesn't overlap with the other one.
   left: 15px;
 }
+
+.toggle-historic-eruptions {
+  margin-left: 24px;
+  margin-top: -6px;
+}
