Style header of volcano popup
[#175585718]

--- a/css/seismic-eruptions-map.less
+++ b/css/seismic-eruptions-map.less
@@ -47,6 +47,13 @@
     border-top: 0
   }
 
+  .leaflet-popup {
+    .popup-header{
+      font-size: 1.1em;
+      font-weight: bold;
+    }
+  }
+
   /* Set of styles applied only when user enters cross section drawing mode */
   &.mode-cross-section {
     .leaflet-map-pane {
