Adjust header styling

--- a/css/seismic-eruptions-map.less
+++ b/css/seismic-eruptions-map.less
@@ -51,6 +51,8 @@
     .popup-header{
       font-size: 1.1em;
       font-weight: bold;
+      margin-top: -2px;
+      margin-bottom: 4px;
     }
   }
 
